--- a/style.css
+++ b/style.css
@@ -31,3 +31,15 @@ img {
     display: block;
     object-fit: cover;
 }
+/*NAVIGATION STYLES*/
+.nav {
+    position: relative;
+    width: 100%;
+    height: 40px;
+    border: 1px solid red;
+}
+.logo {
+    width: 140px;
+    height: 40px;
+    background: url('img/logo.svg') no-repeat center;
+}
