--- a/style.css
+++ b/style.css
@@ -36,14 +36,27 @@ a {
     text-transform: capitalize;
 }
 /*NAVIGATION STYLES*/
+
 .nav {
     position: relative;
     width: 100%;
-    height: 40px;
+    height: 60px;
     border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav-list {
+    list-style-type: none;
+}
+.nav-list__items {
+    display: inline;
 }
 .logo {
     width: 140px;
     height: 40px;
     background: url('img/logo.svg') no-repeat center;
+}
+.is-hidden {
+    visibility: hidden;
 }
