--- a/style.css
+++ b/style.css
@@ -63,4 +63,8 @@ a {
 .is-hidden {
     visibility: hidden;
 }
-/*HOME STYLES*/
+/*ABOUT STYLES*/
+.article-img{
+    width: 100px;
+    height: 100px;
+}
