--- a/style.css
+++ b/style.css
@@ -77,7 +77,9 @@ a {
 }
 .blog-img {
     width: 100%;
-    border-radius: 15px;
+    overflow: hidden;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 .blog-articles {
     display: flex;
