--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a {
     height: 60px;
     border: 1px solid red;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 .nav-list {
@@ -62,7 +62,12 @@ a {
     color: var(--neutral-white);
 }
 .is-hidden {
-    visibility: hidden;
+    display: none;
+}
+.btn-menu {
+    background: url("img/icon-hamburger.svg") center no-repeat;
+    width: 50px;
+    height: 30px;
 }
 /*HOME STYLES*/
 .home {
