--- a/style.css
+++ b/style.css
@@ -54,12 +54,13 @@ a {
     display: inline;
 }
 .logo {
-    min-width: 140px;
+    min-width: 130px;
     height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: var(--neutral-white);
+    margin-left: 30px;
 }
 .is-hidden {
     display: none;
@@ -68,6 +69,7 @@ a {
     background: url("img/icon-hamburger.svg") center no-repeat;
     width: 50px;
     height: 30px;
+    margin-right: 20px;
 }
 /*HOME STYLES*/
 .home {
