--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ a {
     justify-content: center;
     align-items: center;
     padding-top: 55px;
+    background-color: var(--neutral-light-grayish-blue);
 }
 .blog-img {
     width: 100%;
@@ -163,6 +164,17 @@ a {
     justify-content: center;
     align-items: center;
     width: 340px;
+    background: white;
+    margin: 0 0 30px 0;
+    border-radius: 6px;
+    padding: 0 0 35px 0;
+}
+.blog-articles h3 {
+    margin-left: 29px;
+}
+.blog-articles .copy-description {
+    line-height: 1.4;
+    letter-spacing: -0.01em;
 }
 .info-articles .copy-description {
     text-align: center;
@@ -181,10 +193,10 @@ h3 {
 }
 .small-copy {
     color: var(--neutral-grayish-blue);
-    text-align: left;
     align-self: flex-start;
-    padding-top: 25px;
+    padding-top: 32px;
     font-size: 0.7em;
+    margin: 0 0 -12px 29px;
 }
 /*FOOTER STYLES*/
 .footer-container {
