Add navbar popup styles

--- a/style.css
+++ b/style.css
@@ -50,9 +50,25 @@ a {
 }
 .nav-list {
     list-style-type: none;
+    width: 275px;
+    height: 280px;
+    background: white;
+    position: absolute;
+    top: 59px;
+    left: 30px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    box-shadow: 4px 14px 15px 9px rgba(5, 16, 17, 0.2);
 }
 .nav-list__items {
     display: inline;
+    margin: -23px 38px 0 0;
+}
+.nav-list__items a {
+    color: #3e3939;
 }
 .logo {
     min-width: 130px;
@@ -66,6 +82,7 @@ a {
 .is-hidden {
     display: none;
 }
+
 .btn-menu {
     background: url("img/icon-hamburger.svg") center no-repeat;
     width: 50px;
