--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ a {
     justify-content: space-evenly;
     align-items: center;
     box-shadow: 4px 14px 15px 9px rgba(5, 16, 17, 0.2);
+    transition: all 0.3s ease-in;
 }
 .nav-list__items {
     display: inline;
@@ -80,7 +81,7 @@ a {
     margin-left: 30px;
 }
 .is-hidden {
-    display: none;
+    opacity: 0;
 }
 
 .btn-menu {
